--- a/combinator-interactive.cabal
+++ b/combinator-interactive.cabal
@@ -25,6 +25,6 @@ executable lazyi
   main-is: main.hs
   -- other-modules:       
   other-extensions:    DeriveFunctor, DeriveFoldable, DeriveTraversable, TemplateHaskell
-  build-depends:       base == 4.*, lens >=3.8 && <=4, void, trifecta == 1.*, template-haskell, th-lift, combinator-interactive, containers, mtl == 2.*
+  build-depends:       base == 4.*, lens >=3.8 && <=4, void, trifecta == 1.*, template-haskell, th-lift, combinator-interactive, containers, mtl == 2.*, cereal, directory, bytestring
   -- hs-source-dirs:      
   default-language:    Haskell2010
